--- a/app/src/main/res/layout/activity_all_sales.xml
+++ b/app/src/main/res/layout/activity_all_sales.xml
@@ -93,14 +93,14 @@
         android:id="@+id/btn_go_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:src="@drawable/ic_home"
-        android:tint="@color/my_white"
+        android:layout_margin="20dp"
         android:background="@drawable/btn_go_home_background"
         android:padding="15dp"
-        android:layout_margin="20dp"
-        tools:ignore="UseAppTint" />
+        android:src="@drawable/ic_home"
+        android:tint="@color/my_white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:ignore="UseAppTint,SpeakableTextPresentCheck" />
 
     <LinearLayout
         android:id="@+id/all_sales_linearlayout"
