--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -79,79 +79,81 @@
         android:id="@+id/change_password_oldpassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/change_password_view2"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/main_edittext_background"
+        android:fontFamily="@font/app_font_medium"
+        android:gravity="center_vertical|right"
+        android:hint="@string/enter_oldpassword"
+        android:inputType="textPassword"
+        android:lines="1"
+        android:paddingLeft="5dp"
+        android:paddingTop="12dp"
+        android:paddingRight="15dp"
+        android:paddingBottom="12dp"
+        android:textSize="12dp"
         app:layout_constraintLeft_toLeftOf="@id/change_password_view2"
         app:layout_constraintRight_toRightOf="@id/change_password_view2"
-        android:hint="@string/enter_oldpassword"
-        android:background="@drawable/main_edittext_background"
-        android:paddingRight="15dp"
-        android:fontFamily="@font/app_font_medium"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:lines="1"
-        android:inputType="textPassword"
-        android:paddingLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:gravity="center_vertical|right"
-        android:textSize="12dp"
-        />
+        app:layout_constraintTop_toTopOf="@id/change_password_view2"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/change_password_newpassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/main_edittext_background"
+        android:fontFamily="@font/app_font_medium"
+        android:gravity="center_vertical|right"
+        android:hint="@string/enter_newpassword"
+        android:inputType="textPassword"
+        android:lines="1"
+        android:paddingLeft="5dp"
+        android:paddingTop="12dp"
+        android:paddingRight="15dp"
+        android:paddingBottom="12dp"
+        android:textSize="12dp"
         app:layout_constraintLeft_toLeftOf="@id/change_password_view2"
         app:layout_constraintRight_toRightOf="@id/change_password_view2"
         app:layout_constraintTop_toBottomOf="@id/change_password_oldpassword"
-        android:hint="@string/enter_newpassword"
-        android:background="@drawable/main_edittext_background"
-        android:paddingRight="15dp"
-        android:fontFamily="@font/app_font_medium"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:lines="1"
-        android:inputType="textPassword"
-        android:paddingLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:gravity="center_vertical|right"
-        android:textSize="12dp"
-        />
+        tools:ignore="TouchTargetSizeCheck" />
+
     <EditText
         android:id="@+id/change_password_reNewpassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/main_edittext_background"
+        android:fontFamily="@font/app_font_medium"
+        android:gravity="center_vertical|right"
+        android:hint="@string/enter_re_newpassword"
+        android:inputType="textPassword"
+        android:lines="1"
+        android:paddingLeft="5dp"
+        android:paddingTop="12dp"
+        android:paddingRight="15dp"
+        android:paddingBottom="12dp"
+        android:textSize="12dp"
         app:layout_constraintLeft_toLeftOf="@id/change_password_view2"
         app:layout_constraintRight_toRightOf="@id/change_password_view2"
         app:layout_constraintTop_toBottomOf="@id/change_password_newpassword"
-        android:hint="@string/enter_re_newpassword"
-        android:background="@drawable/main_edittext_background"
-        android:paddingRight="15dp"
-        android:fontFamily="@font/app_font_medium"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:textSize="12dp"
-        android:lines="1"
-        android:inputType="textPassword"
-        android:gravity="center_vertical|right"
-        android:paddingLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        />
+        tools:ignore="TouchTargetSizeCheck" />
+
     <CheckBox
         android:id="@+id/change_password_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/change_password_reNewpassword"
-        app:layout_constraintRight_toRightOf="@id/change_password_view2"
-        android:layout_marginRight="5dp"
         android:layout_marginTop="12dp"
+        android:layout_marginRight="5dp"
         android:background="@drawable/check_background"
-        />
+        app:layout_constraintRight_toRightOf="@id/change_password_view2"
+        app:layout_constraintTop_toBottomOf="@id/change_password_reNewpassword"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
         android:layout_width="wrap_content"
