--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -28,13 +28,13 @@
         android:layout_height="100dp"
         android:background="@drawable/sitting_img_background"
         android:padding="15dp"
+        android:scaleType="fitCenter"
         android:src="@drawable/ic_man"
+        app:layout_constraintBottom_toTopOf="@id/guideline_horz_0.2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline_horz_0.2"
-        android:scaleType="fitCenter"
-        />
+        tools:ignore="SpeakableTextPresentCheck" />
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -255,56 +255,59 @@
             android:gravity="center"
             android:layout_marginTop="-10dp"
             >
+
             <Spinner
                 android:id="@+id/create_account_sp_day"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@drawable/sign_in_edittext_background"
                 android:fontFamily="@font/app_font_medium"
                 android:gravity="center_vertical|right"
+                android:textAlignment="viewEnd"
                 android:textColor="@color/my_black"
                 android:textColorHint="@color/my_lightblack2"
-                android:background="@drawable/sign_in_edittext_background"
                 android:textSize="8sp"
                 android:textStyle="bold"
-                android:textAlignment="viewEnd"
-                tools:ignore="RtlCompat" />
+                tools:ignore="RtlCompat,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
             <View
                 android:layout_width="1dp"
                 android:layout_height="20dp"
                 android:background="@drawable/create_view_background"
                 />
+
             <Spinner
                 android:id="@+id/create_account_sp_month"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@drawable/sign_in_edittext_background"
                 android:fontFamily="@font/app_font_medium"
                 android:gravity="center_vertical|right"
                 android:textColor="@color/my_black"
                 android:textColorHint="@color/my_lightblack2"
-                android:background="@drawable/sign_in_edittext_background"
                 android:textSize="12sp"
                 android:textStyle="bold"
-                />
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
             <View
                 android:layout_width="1dp"
                 android:layout_height="20dp"
                 android:background="@drawable/create_view_background"
                 />
+
             <Spinner
                 android:id="@+id/create_account_sp_year"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@drawable/sign_in_edittext_background"
                 android:fontFamily="@font/app_font_medium"
                 android:gravity="center_vertical|right"
                 android:textColor="@color/my_black"
                 android:textColorHint="@color/my_lightblack2"
-                android:background="@drawable/sign_in_edittext_background"
                 android:textSize="8sp"
                 android:textStyle="bold"
-                />
+                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
         </LinearLayout>
         <View
             android:layout_width="match_parent"
@@ -343,34 +346,37 @@
             android:orientation="horizontal"
             android:gravity="center"
             >
+
             <RadioButton
                 android:id="@+id/create_account_rb_female"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/female"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:layout_marginRight="25dp"
                 android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/app_font_medium"
+                android:gravity="center"
+                android:text="@string/female"
                 android:textColor="@color/my_black"
-                android:fontFamily="@font/app_font_medium"/>
+                tools:ignore="TouchTargetSizeCheck" />
             <View
                 android:layout_width="1dp"
                 android:layout_height="20dp"
                 android:background="@drawable/create_view_background"
                 />
+
             <RadioButton
                 android:id="@+id/create_account_rb_male"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/male"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:layout_marginRight="25dp"
                 android:layout_marginLeft="25dp"
-                android:textColor="@color/my_black"
+                android:layout_marginRight="25dp"
+                android:layout_weight="1"
                 android:fontFamily="@font/app_font_medium"
-                />
+                android:gravity="center"
+                android:text="@string/male"
+                android:textColor="@color/my_black"
+                tools:ignore="TouchTargetSizeCheck" />
         </RadioGroup>
         <View
             android:layout_width="match_parent"
